--- a/Factory/Views/Engineers/Create.cshtml
+++ b/Factory/Views/Engineers/Create.cshtml
@@ -2,13 +2,13 @@
   Layout = "_Layout";
 }
 
-@model ToDoList.Models.Category
+@model Factory.Models.Engineer
 
 <h4>Add a new task</h4>
 @using (Html.BeginForm())
 {
   @Html.LabelFor(model => model.Name)
   @Html.TextBoxFor(model => model.Name)
-  <input type="submit" value="Add new category" />
+  <input type="submit" value="Add new engineer" />
 }
-<p>@Html.ActionLink("Show all categories", "Index")</p>
+<p>@Html.ActionLink("Show all engineers", "Index")</p>
