--- a/Factory/Views/Engineers/Delete.cshtml
+++ b/Factory/Views/Engineers/Delete.cshtml
@@ -2,7 +2,7 @@
   Layout = "_Layout";
 }
 
-@model ToDoList.Models.Category
+@model Factory.Models.Engineer
 
 <h2>Are you sure you want to delete this?</h2>
 
