--- a/Factory/Views/Engineers/Index.cshtml
+++ b/Factory/Views/Engineers/Index.cshtml
@@ -2,21 +2,21 @@
   Layout = "_Layout";
 }
 
-@using ToDoList.Models;
+@using Factory.Models;
 
-<h1>Categories</h1>
+<h1>Engineers</h1>
 
 @if (@Model.Count == 0)
 {
-  <h3>No categories have been added yet!</h3>
+  <h3>No engineers have been added yet!</h3>
 } 
 
 <ul>
-  @foreach(Category category in Model)
+  @foreach(Engineer engineer in Model)
   {
-    <li>@Html.ActionLink($"{category.Name}", "Details", new { id = category.CategoryId })</li>
+    <li>@Html.ActionLink($"{engineer.Name}", "Details", new { id = engineer.EngineerId })</li>
   }
 </ul>
 
-<p>@Html.ActionLink("Add new category", "Create")</p>
+<p>@Html.ActionLink("Add new engineer", "Create")</p>
 <p>@Html.ActionLink("Home", "Index", "Home")</p>
