--- a/Factory/Views/Machines/Create.cshtml
+++ b/Factory/Views/Machines/Create.cshtml
@@ -2,7 +2,7 @@
   Layout = "_Layout";
 }
 
-@model ToDoList.Models.Item
+@model Factory.Models.Machine
 
 <h4>Add a new task</h4>
 
@@ -11,12 +11,12 @@
     @Html.LabelFor(model => model.Description)
     @Html.TextBoxFor(model => model.Description)
 
-    @Html.Label("Select category")
-    @Html.DropDownList("CategoryId")
+    @Html.Label("Select engineer")
+    @Html.DropDownList("EngineerId")
 
     @Html.Label("Due Date")
     @Html.EditorFor(model => model.DueDate)
 
-    <input type="submit" value="Add new item" class="btn btn-default" />
+    <input type="submit" value="Add new machine" class="btn btn-default" />
 }
-<p>@Html.ActionLink("Show all items", "Index")</p>
+<p>@Html.ActionLink("Show all machines", "Index")</p>
