--- a/Factory/Views/Machines/Delete.cshtml
+++ b/Factory/Views/Machines/Delete.cshtml
@@ -2,9 +2,9 @@
   Layout = "_Layout";
 }
 
-@model ToDoList.Models.Item
+@model Factory.Models.Machine
 
-<h2>Are you sure you want to delete this Item?</h2>
+<h2>Are you sure you want to delete this Machine?</h2>
 
 @Html.DisplayNameFor(model => model.Description): @Html.DisplayFor(model => model.Description)
 @using (Html.BeginForm())
