--- a/Factory/Views/Machines/Details.cshtml
+++ b/Factory/Views/Machines/Details.cshtml
@@ -2,26 +2,26 @@
   Layout = "_Layout";
 }
 
-@model ToDoList.Models.Item
+@model Factory.Models.Machine
 
-<h2>Item Details</h2>
+<h2>Machine Details</h2>
 <hr />
 <h3>@Html.DisplayNameFor(model => model.Description): @Html.DisplayFor(model => model.Description)</h3>
 
 @if(@Model.JoinEntities.Count == 0)
 {
-  <p>This item does not belong to any categories</p>
+  <p>This machine does not belong to any engineers</p>
 }
 else
 {
-  <h4>Categories the item belongs to:</h4>
+  <h4>Engineers the machine belongs to:</h4>
   <ul>
     @foreach(var join in Model.JoinEntities)
     {
-      <li>@join.Category.Name</li>
-      @using (Html.BeginForm("DeleteCategory", "Items"))
+      <li>@join.Engineer.Name</li>
+      @using (Html.BeginForm("DeleteEngineer", "Machines"))
       {
-        @Html.Hidden("joinId", @join.CategoryItemId)
+        @Html.Hidden("joinId", @join.EngineerMachineId)
         <input type="submit" value="Delete"/>
       }
     }
@@ -31,6 +31,6 @@ else
 
 
 <p>@Html.ActionLink("Back to list", "Index")</p>
-<p>@Html.ActionLink("Edit Item", "Edit", new { id = Model.ItemId })</p>
-<p>@Html.ActionLink("Delete Item", "Delete", new { id = Model.ItemId })</p>
-<p>@Html.ActionLink("Add a Category", "AddCategory", new { id = Model.ItemId })</p>
+<p>@Html.ActionLink("Edit Machine", "Edit", new { id = Model.MachineId })</p>
+<p>@Html.ActionLink("Delete Machine", "Delete", new { id = Model.MachineId })</p>
+<p>@Html.ActionLink("Add a Engineer", "AddEngineer", new { id = Model.MachineId })</p>
