--- a/Factory/Views/Machines/Index.cshtml
+++ b/Factory/Views/Machines/Index.cshtml
@@ -2,19 +2,19 @@
   Layout = "_Layout";
 }
 
-@using ToDoList.Models;
-@model List<ToDoList.Models.Item>;
+@using Factory.Models;
+@model List<Factory.Models.Machine>;
 
-<h1>Items</h1>
+<h1>Machines</h1>
 
 @if (@Model.Count == 0)
 {
-  <h3>No items have been added yet!</h3>
+  <h3>No machines have been added yet!</h3>
 } 
 
-@foreach (Item item in Model)
+@foreach (Machine machine in Model)
 {
-  <li>@Html.ActionLink($"{item.Description}" + " | Due: " + $"{@item.DueDate.ToString("MM/dd/yyyy")}", "Details", new { id = item.ItemId })</li>
+  <li>@Html.ActionLink($"{machine.Description}" + " | Due: " + $"{@machine.DueDate.ToString("MM/dd/yyyy")}", "Details", new { id = machine.MachineId })</li>
 }
 
-<p>@Html.ActionLink("Add new item", "Create")</p>
+<p>@Html.ActionLink("Add new machine", "Create")</p>
